# sysmaster

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Cargo.toml  Dockerfile  README  README-en.md  README.ch.md  README.en.md  README.md  build.rs  build.sh  deny.toml  deploy-gh-pages.sh  docker-run.sh  index.html  install.sh  libs.md  mkdocs.yml  requirements.sh  rpms  sitemap.xml  sysmaster.spec  vendor.sh
components/mount/: Cargo.toml
components/mount/src/: lib.rs  mount_comm.rs  mount_manager.rs  mount_mng.rs  mount_rentry.rs  mount_unit.rs
components/service/: Cargo.toml
components/service/src/: exec_child.rs  lib.rs  service.rs  service_base.rs  service_comm.rs  service_config.rs  service_load.rs  service_manager.rs  service_mng.rs  service_monitor.rs  service_parse.rs  service_pid.rs  service_rentry.rs  service_spawn.rs  service_start.rs  service_unit.rs
components/socket/: Cargo.toml
components/socket/src/: lib.rs  socket_base.rs  socket_comm.rs  socket_config.rs  socket_load.rs  socket_manager.rs  socket_mng.rs  socket_pid.rs  socket_port.rs  socket_rentry.rs  socket_spawn.rs  socket_unit.rs
coms/mount/: Cargo.toml
coms/mount/src/: comm.rs  lib.rs  manager.rs  mng.rs  mount_base.rs  mount_comm.rs  mount_manager.rs  mount_mng.rs  mount_rentry.rs  mount_unit.rs  rentry.rs  unit.rs
coms/service/: Cargo.toml
coms/service/src/: base.rs  comm.rs  config.rs  lib.rs  manager.rs  mng.rs  monitor.rs  pid.rs  rentry.rs  service_base.rs  service_comm.rs  service_config.rs  service_manager.rs  service_mng.rs  service_monitor.rs  service_pid.rs  service_rentry.rs  service_spawn.rs  service_unit.rs  spawn.rs  unit.rs
coms/socket/: Cargo.toml
coms/socket/src/: comm.rs  config.rs  lib.rs  load.rs  manager.rs  mng.rs  pid.rs  port.rs  rentry.rs  socket_base.rs  socket_comm.rs  socket_config.rs  socket_load.rs  socket_manager.rs  socket_mng.rs  socket_pid.rs  socket_port.rs  socket_rentry.rs  socket_spawn.rs  socket_unit.rs  spawn.rs  unit.rs
core/libcore/: Cargo.toml  build.rs
core/libcore/src/: error.rs  lib.rs  serialize.rs  specifier.rs
core/sctl/: Cargo.toml  main.rs
core/sctl/src/: main.rs
core/sysmaster/: Cargo.toml  main.rs
core/sysmaster/job/: alloc.rs  junit.rs  stat.rs
core/sysmaster/keep_alive/: mod.rs
core/sysmaster/manager/: alive_timer.rs  commands.rs  mod.rs  signals.rs
core/sysmaster/mount/: setup.rs
core/sysmaster/src/: main.rs
core/sysmaster/unit/: manager.rs  mod.rs  notify.rs  rentry.rs  runtime.rs  sigchld.rs  uload.rs
core/sysmaster/utils/: mod.rs  table.rs
docs/: README  (+7 more)
exts/devmaster/: Cargo.toml  build.rs
exts/devmaster/config/: config.toml
exts/devmaster/examples/: netlink.rs
exts/devmaster/libblkid_rs/: Cargo.toml  build.rs
exts/devmaster/src/: control_manager.rs  devctl_monitor.rs  devctl_trigger.rs  lib.rs  uevent_monitor.rs  worker_manager.rs
exts/devmaster/tests/: compare_triggered_devices.sh  install.sh  test_devmaster_rules.sh
exts/fstab/: Cargo.toml
exts/fstab/src/: fstab_item.rs  main.rs
exts/getty-generator/: Cargo.toml
exts/getty-generator/src/: main.rs
exts/hostname_setup/: Cargo.toml
exts/hostname_setup/src/: main.rs
exts/hwdb/: Cargo.toml
exts/hwdb/src/: main.rs
exts/libudev/: Cargo.toml  build.rs  libudev.sym
exts/libudev/src/: lib.rs  libudev.rs  libudev_device.rs  libudev_enumerate.rs  libudev_hwdb.rs  libudev_list.rs  libudev_monitor.rs  libudev_queue.rs
exts/libudev/tests/: Makefile  README  test_libudev_device_leak.c  test_libudev_device_new.c  test_libudev_device_thread.c  test_libudev_hwdb.c  test_libudev_monitor.c  test_libudev_queue.c
exts/machine-id-setup/: Cargo.toml
exts/machine-id-setup/src/: main.rs
exts/random_seed/: Cargo.toml
exts/random_seed/src/: main.rs  random_seed.rs
exts/run/: Cargo.toml
exts/run/src/: main.rs
exts/switch_root/: Cargo.toml
exts/switch_root/src/: main.rs  switch_root.rs
exts/sysmonitor/: Cargo.toml
exts/sysmonitor/src/: main.rs  process_count.rs  process_fd.rs  zombie.rs
init/: Cargo.toml  config.rs  logger.rs  main.rs  mount.rs  runtime.rs
init/src/: main.rs
init/src/runtime/: comm.rs  mod.rs  signals.rs
libcgroup/: Cargo.toml
libcgroup/src/: cgroup.rs  lib.rs
libevent/: Cargo.toml
libevent/examples/: signal.rs
libevent/src/: events.rs  lib.rs  signal.rs  source.rs  timer.rs
libevent/src/poll/: epoll.rs  mod.rs
libevent/tests/: inotify.rs  io.rs  signal.rs  timer.rs
libs/basic/: Cargo.toml
libs/basic/src/: argv.rs  argv_util.rs  build.rs  build_util.rs  capability.rs  cargo.rs  cmdline.rs  condition.rs  config.rs  cpu.rs  device.rs  devnum_util.rs  env.rs  env_cargo.rs  errno_util.rs  error.rs  ether_addr_util.rs  exec.rs  exec_util.rs  fd.rs  fd_util.rs  file_util.rs  fs.rs  fs_util.rs  glob.rs  gpt.rs  id128.rs  id128_util.rs  initrd_util.rs  io.rs  io_util.rs  lib.rs  logger.rs  machine.rs  macros.rs  memory.rs  mount.rs  mount_util.rs  murmurhash2.rs  namespace.rs  (+31 more)
libs/blkid_rs/: Cargo.toml  build.rs
libs/blkid_rs/src/: lib.rs  partition.rs  probe.rs
libs/cgroup/: Cargo.toml
libs/cgroup/src/: cgroup.rs  error.rs  lib.rs
libs/cmdproto/: Cargo.toml  build.rs
libs/cmdproto/examples/: signal.rs
libs/cmdproto/src/: error.rs  lib.rs
next/: Cargo.toml  README.md
next/src/actor/: mod.rs  mount_monitor.rs
next/src/bins/: syscontrol.rs  sysmaster.rs
next/src/fstab/: mod.rs
next/src/manager/: mod.rs
next/src/unit/: mod.rs
next/src/units/: mod.rs  socket.rs
next/src/util/: mod.rs
next/units/: conflict-with-t1.service  ssh-keygen-rsa.service  ssh-keygen.target  sshd.service
process1/: Cargo.toml  build.rs  build.sh  build_conf.sh
process1/conf/: plugin.conf
process1/examples/: signal.rs
process1/src/: lib.rs
process1/src/manager/: commands.rs  manager.rs  manager_config.rs  mod.rs  mount_monitor.rs  notify.rs  pre_install.rs  reliability.rs  rentry.rs  service.rs  sigchld.rs  signals.rs  table.rs
process1/src/mount/: mod.rs  mount_setup.rs
process1/src/plugin/: mod.rs
process1/src/proto/: abi.proto  abi.rs  execute.rs  frame.rs  mod.rs
(+1629 files in other folders)
