[package]
name = "init"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.24"
tokio = { version = "1.29.1", features = ["net", "sync", "process", "rt-multi-thread", "macros", "signal", "time"] }
clap = { version = "3.1.8", features = ["derive"] }
once_cell = "1.18.0"
log = { version = "0.4", features = ["std"] }
psutil = { version = "*", default_features = false, features = ["process"]}
