[package]
name = "init"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.24", default-features = false, features = [
    "fs",
    "net",
    "signal",
    "time",
    "user",
] }
kernlog = "0.3.1"
log = { version = "0.4", default_features = false, features = ["std"] }
mio = { version = "0.8.8", default_features = false, features = [
    "os-poll",
    "os-ext",
] }
