[package]
name = "cgroup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
name = "cgroup"


[dependencies]
utils = { path = "../libutils" }
log = "0.4"
nix = "0.23.0"
errno = "*"
bitflags = "1.3.2"
regex = "1"