[package]
name = "event"
version = "0.1.0"
authors = ["overweight <hexiaowen@huawei.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
name = "event"

[dependencies]
libc = { version = "0.2" }
nix = { version = "0.24" }
utils = { path = "../libutils" }
log = "0.4"
