[package]
name = "sysmaster-ng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sysmaster"
path = "src/bins/sysmaster.rs"

[[bin]]
name = "syscontrol"
path = "src/bins/syscontrol.rs"

[dependencies]
async-trait = "0.1.74"
log = "0.4.20"
once_cell = "1.19.0"
tokio = { version = "1.35.0", features = ["full"] }
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
unit_parser = { path = "../libs/unit_parser" }
