[package]
name = "process1"
version = "0.1.0"
authors = ["overweight <hexiaowen@huawei.com>"]
edition = "2021"
default-run = "process1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "process1"
path = "src/bin/process1.rs"

[[bin]]
name = "pctrl"
path = "src/bin/pctrl.rs"


[lib]
# crate_type = ["dylib"]
crate_type = ["lib"]
path = "src/lib.rs"
name = "process1"

[dependencies]
dynamic_reload = "0.4.0"
walkdir = "2"
siphasher = { version = "0.3", features = ["serde"] }
utils = { path = "../libutils" }
event = { path = "../libevent" }
strum = { version = "0.23", features = ["derive"] }
nix = "0.23.0"
log = "0.4"
libc = "0.2.*"
signal-hook = "0.3.13"
prost = "0.9" # 处理 protobuf 的代码
http = "0.2" # 我们使用 HTTP status code 所以引入这个类型库

[build-dependencies]
prost-build = "0.9" # 编译 protobuf