[package]
name = "service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "service"

[dependencies]
dynamic_reload = "0.4.0"
utils = { path = "../../libutils" }
cgroup = { path = "../../libcgroup" }
process1 = { path = "../../process1" }
event = { path = "../../libevent" }
libwatchdog = { path = "../../libwatchdog" }
strum = { version = "0.23", features = ["derive"] }
nix = "0.24"
log = "0.4"
regex = "1"
serde = "1.0.130"
confique = { version = "0.1.3", default-features= false, features = [ 'toml' ] }

[dev-dependencies]
tests = { path = "../../libtests" }