[package]
name = "mount"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]
name = "mount"

[dependencies]
dynamic_reload = "0.8.0"
utils = { path = "../../libutils" }
process1 = { path = "../../process1" }
nix = "0.24"
log = "0.4"
epoll = "4.3.1"
event = { path = "../../libevent" }
libmount = "0.1.15"
libc = "0.2.*"
serde = "1.0.130"
once_cell = { version = "1.5.2"}
