[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]
name = "service"

[dependencies]
libutils = { path = "../../libs/libutils" }
libcgroup = { path = "../../libs/libcgroup" }
libevent = { path = "../../libs/libevent" }
libwatchdog = { path = "../../libs/libwatchdog" }
sysmaster = { path = "../../" }
nix = "0.24"
log = "0.4"
serde = "1.0.130"
confique = { version = "0.1.3", default-features= false, features = [ 'toml' ] }
libc = "0.2.*"
once_cell = { version = "1.5.2"}

[dev-dependencies]
libtests = { path = "../../libs/libtests" }
