[package]
name = "socket"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]
name = "socket"

[dependencies]
libutils = { path = "../../libs/libutils" }
libcgroup = { path = "../../libs/libcgroup" }
libevent = { path = "../../libs/libevent" }
libsysmaster = { path = "../../libsysmaster" }

dynamic_reload = "0.8.0"
strum = { version = "0.23", features = ["derive"] }
nix = "0.24"
log = "0.4"
toml = "0.5.8"
serde_derive = "1.0.130"
serde = "1.0.130"
confique = { version = "0.1.3", default-features= false, features = [ 'toml' ] }
once_cell = { version = "1.5.2"}

[dev-dependencies]
tests = { path = "../../libs/libtests" }
