[package]
name = "socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]
name = "socket"

[dependencies]
constants = { version = "0.1.0", path = "../../libs/constants" }
basic = { path = "../../libs/basic" }
event = { path = "../../libs/event" }
macros = { path = "../../libs/macros" }
sysmaster = { path = "../../" }

nix = "0.24"
log = "0.4"
serde = "1.0.130"
confique = { version = "0.1.3", default-features = false, features = ['toml'] }
once_cell = { version = "1.5.2" }

[dev-dependencies]
libtests = { path = "../../libs/libtests" }
