[package]
name = "core"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# internal libraries
cgroup = { path = "../../libs/cgroup" }
event = { path = "../../libs/event" }
basic = { path = "../../libs/basic" }

# third libraries
bitflags = "1.3.2"
confique = { version = "0.1.3", default-features = false, features = ['toml'] }
heed = "0.10.6"
libc = "0.2.*"
log = { version = "=0.4.14", default_features = false, features = ["std"] }
nix = "0.24"
regex = { version = "1.6.0", default-features = false, features = ["std"] }
serde = "1.0.130"
snafu = "0.7"

[features]
default = ["noplugin"]
noplugin = []
