[package]
name = "sctl"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basic = { path = "../../libs/basic" }
cmdproto = { path = "../../libs/cmdproto" }
constants = { path = "../../libs/constants" }

clap = { version = "3.1.8", features = [
    "derive",
    "std",
], default-features = false }
nix = { version = "0.24", default-features = false }
