[package]
name = "sysmaster-core"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sysmaster"
path = "src/main.rs"

[dev-dependencies.libtests]
path = "../../libs/libtests"

[dependencies]
# internal libraries
core = { path = "../libcore" }
cgroup = { path = "../../libs/cgroup" }
event = { path = "../../libs/event" }
basic = { path = "../../libs/basic" }
cmdproto = { path = "../../libs/cmdproto" }
constants = { path = "../../libs/constants" }
mount = { path = "../coms/mount", optional = true }
service = { path = "../coms/service", optional = true }
socket = { path = "../coms/socket", optional = true }
target = { path = "../coms/target", optional = true }

# third libraries
bitflags = "1.3.2"
confique = { version = "0.1.3", default-features = false, features = ['toml'] }
dynamic_reload = { version = "0.8.0", optional = true }
lazy_static = "1.4.0"
libc = "0.2.*"
once_cell = { version = "=1.7.2" }
log = { version = "=0.4.14", default_features = false, features = ["std"] }
nix = "0.24"
regex = { version = "1.6.0", default-features = false, features = ["std"] }
serde = "1.0.130"
siphasher = { version = "0.3", features = ["serde"] }
walkdir = "2"
fnmatch-regex = "0.2.0"
snafu = "0.7"
clap = { version = "3.1.8", features = ["derive"] }

[features]
default = ["linux", "noplugin", "mount", "socket", "service", "target"]
hongmeng = []
linux = []
noplugin = []
plugin = ["dynamic_reload"]
