[package]
name = "sysmaster"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sysmaster"
path = "src/main.rs"

[dev-dependencies.libtests]
path = "../../libs/libtests"

[dependencies]
# internal libraries
basic = { path = "../../libs/basic" }
cgroup = { path = "../../libs/cgroup", default-features = false }
cmdproto = { path = "../../libs/cmdproto" }
constants = { path = "../../libs/constants" }
core = { path = "../libcore", default-features = false }
event = { path = "../../libs/event" }
mount = { path = "../coms/mount", optional = true }
service = { path = "../coms/service", optional = true }
socket = { path = "../coms/socket", optional = true }
target = { path = "../coms/target", optional = true }

# third libraries
bitflags = "1.3.2"
confique = { version = "0.1.3", default-features = false }
clap = { version = "3.1.8", features = [
    "derive",
    "std",
], default-features = false }
dynamic_reload = { version = "0.10.0", optional = true }
fnmatch-regex = "0.2.0"
lazy_static = "1.4.0"
libc = { version = "0.2.*", default-features = false }
log = { version = "=0.4.14", default_features = false }
nix = { version = "0.24", default-features = false, features = [
    "reboot",
    "mount",
    "socket",
] }
once_cell = { version = "=1.7.2", default-features = false }
regex = { version = "1.6.0", default-features = false }
serde = { version = "1.0.130", default-features = false }
siphasher = { version = "0.3", default-features = false }
# snafu = { version = "0.7", default-features = false }
walkdir = "2"

[features]
default = ["linux", "noplugin", "mount", "socket", "service", "target"]
hongmeng = []
linux = []
noplugin = []
plugin = ["dynamic_reload"]
