[package]
name = "devmaster"
version = "0.5.0"
edition = "2021"
default-run = "devmaster"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "devmaster"
path = "src/bin/devmaster/main.rs"

[[bin]]
name = "devctl"
path = "src/bin/devctl/main.rs"

[[bin]]
name = "ata_id"
path = "src/bin/tools/ata_id/main.rs"

[lib]
name = "libdevmaster"
path = "src/lib/lib.rs"

[dependencies]
# internal libraries
basic = { path = "../../libs/basic", default-features = false, features = [
    "sysfs",
    "unistd",
    "uuid",
    "network",
    "naming_scheme",
    "socket",
    "io",
] }
blkid_rs = { path = "../../libs/blkid_rs" }
device = { path = "../../libs/device" }
event = { path = "../../libs/event" }
input_event_codes_rs = { path = "../../libs/input_event_codes_rs" }
kmod_rs = { path = "../../libs/kmod_rs" }
scsi_generic_rs = { path = "../../libs/scsi_generic_rs" }
log = { path = "../../libs/log" }

# third libraries
bitflags = "1.3.2"
clap = { version = "3.1.8", default_features = false, features = [
    "derive",
    "std",
] }
cluFlock = { version = "1.2.7", default-features = false }
confique = { version = "0.1.3", default-features = false, features = ['toml'] }
fnmatch-regex = "0.2.0"
futures = { version = "0.3.13", default-features = false }
input-event-codes = "5.16.8"
ioctl-sys = "0.7.1"
ioctls = "0.6.1"
lazy_static = "1.4.0"
libc = { version = "0.2.*", default-features = false }
nix = { version = "0.24", default-features = false, features = [
    "uio",
    "user",
    "ioctl",
    "net",
    "poll",
    "resource",
] }
regex = { version = "1.7.0", default_features = false }
rtnetlink = "0.8.1"
serde = { version = "1.0.130", default-features = false }
shell-words = "1.1.0"
snafu = { version = "0.7", default-features = false }
sscanf = "0.4.0"
tokio = { version = "1.29.1", default_features = false, features = [
    "rt-multi-thread",
] }
toml = "0.5.8"
wait-timeout = "0.2.0"

[build-dependencies]
basic = { path = "../../libs/basic", features = ["cargo"] }
