[package]
name = "fstab"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { path = "../../libs/log" }
inotify = { version = "0.9.2", default-features = false }
nix = { version = "0.24", default-features = false }
basic = { path = "../../libs/basic", features = ["mount"] }
