[package]
name = "hostname_setup"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../libs/basic", default-features = false, features = [
    "os_release",
    "cmdline",
    "config",
] }
log = { path = "../../libs/log" }

nix = { version = "0.24", default-features = false, features = [
    "hostname",
    "process",
    "feature",
] }
