[package]
name = "sysmaster-hwdb"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.24", default-features = false }
log = { path = "../../libs/log", default-features = false }
clap = { version = "3.1.8", default_features = false, features = [
    "derive",
    "std",
] }
hwdb = { path = "../../libs/hwdb", default-features = false }
